# dnd_the_game_tracker

./: Cargo.toml  README.md
backend/: .env  Cargo.toml
dnd-desktop/: Cargo.toml  Dioxus.toml
dnd-desktop-old/: index.html  package.json  tsconfig.json  vite.config.ts
dnd-desktop-old/src/: App.css  App.tsx  main.tsx
dnd-desktop-old/src-tauri/: Cargo.toml  tauri.conf.json
dnd-desktop-old/src-tauri/src/: main.rs
dnd-desktop-old/src/component/: SiteInfoCard.tsx
dnd-desktop-old/src/layout/: CampainLayout.tsx
dnd-desktop-old/src/screen/: Campain.tsx
dnd-desktop-old/src/store/: GlobalStore.ts
dnd-desktop/assets/: main.css  tailwind.css
dnd-desktop/src/: cli.rs  main.rs  persistence.rs
dnd-desktop/src/backend/: combat.rs  mod.rs  registry.rs  routes.rs  ws.rs
dnd-desktop/src/backend/models/: messages.rs  mod.rs  pool.rs
dnd-desktop/src/states/: mod.rs
dnd-desktop/src/states/global/: mod.rs
dnd-desktop/src/ui/: mod.rs
dnd-desktop/src/ui/components/: cloudflare_tunnel.rs  dice_roller.rs  mod.rs
dnd-desktop/src/ui/layouts/: dashboard_layout.rs  mod.rs
dnd-desktop/src/ui/screens/: combat.rs  items.rs  load_campain.rs  lore.rs  main_menu.rs  mod.rs  new_campain.rs  options_menu.rs  player_inventory.rs  player_spells.rs  players.rs
dnd-desktop/src/ui/screens/items_form/: armour_form.rs  consumable_form.rs  misc_form.rs  mod.rs  weapon_form.rs
dnd-desktop/src/vault/: entry.rs  error.rs  frontmatter.rs  mod.rs
dnd-movile/: README.md  readme.md  settings.gradle.kts
dnd-movile/app/: build.gradle.kts
dnd-movile/app/src/androidTest/java/io/github/gasparkral/dnd/: ExampleInstrumentedTest.kt
dnd-movile/app/src/androidTest/java/io/github/gasparkral/dnd_movile/: ExampleInstrumentedTest.kt
dnd-movile/app/src/main/: AndroidManifest.xml
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/: MainActivity.kt  MainApplication.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/di/: Module.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/infra/: HttpClient.kt  HttpError.kt  HttpManager.kt  SocketManager.kt  WebSocketClient.kt  WebSocketMessage.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/infra/dao/: CharacterDAO.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/infra/dbstruct/: DB.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/infra/repository/: DraftRepository.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/infra/service/: CharacterService.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/model/: Campaign.kt  Catalog.kt  CharacterDraft.kt  Dice.kt  Inventory.kt  Spell.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/model/exception/: EntityNotFoundException.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/ui/component/: CharacterSelecctionItem.kt  DndComponents.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/ui/screen/: CharacterCreationScreen.kt  CharacterInfoScreen.kt  CharacterSelectionScreen.kt  CombatScreen.kt  DashboardScreen.kt  DiceRollerScreen.kt  InventoryScreen.kt  LoreScreen.kt  RequestUrlConnectionScreen.kt  SetupUsernameScreen.kt  SpellScreen.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/ui/theme/: Color.kt  Theme.kt  Type.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/ui/viewmodel/: CharacterCreationViewModel.kt  CharacterSelectionViewModel.kt  DiceRollerViewModel.kt  InventoryViewModel.kt  SpellViewModel.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/utils/: Result.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd/utils/globals/: UrlConnection.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd_movile/: MainActivity.kt
dnd-movile/app/src/main/java/io/github/gasparkral/dnd_movile/ui/theme/: Color.kt  Theme.kt  Type.kt
dnd-movile/app/src/main/res/values/: strings.xml  themes.xml
dnd-movile/app/src/test/java/io/github/gasparkral/dnd/: ExampleUnitTest.kt
dnd-movile/app/src/test/java/io/github/gasparkral/dnd_movile/: ExampleUnitTest.kt
dnd-movile/gradle/: libs.versions.toml
dnd-movile/gradle/wrapper/: gradle-wrapper.properties
shared/: Cargo.toml
shared/src/: lib.rs  persistence.rs
shared/src/api_types/: catalog.rs  character_draft.rs  combat.rs  inventory.rs  mod.rs  proficiencies.rs  spells.rs
shared/src/models/: attributes.rs  character.rs  damage.rs  dice.rs  effect.rs  inventory.rs  mod.rs
shared/src/models/builders/: player.rs
shared/src/models/defaults/: mod.rs
shared/src/models/defaults/backgrounds/: mod.rs
shared/src/models/defaults/classes/: mod.rs
shared/src/models/defaults/feats/: feats.rs  mod.rs
shared/src/models/defaults/races/: dragonborn.rs  dwarf.rs  elf.rs  gnome.rs  goliat.rs  half_elf.rs  half_orc.rs  halfling.rs  human.rs  mod.rs  tiefling.rs
shared/src/models/items/: armours.rs  mod.rs  weapons.rs
shared/src/traits/: background.rs  class.rs  feat.rs  mod.rs  race.rs
