[workspace]
members = [
    "dnd-desktop",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Gaspar Gómez Kral"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[workspace.dependencies.uuid]
version = "1"
features = [
    "v4",
    "serde",
]
