[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
# ── Crates del workspace ──────────────────────────────────────────────────────
shared = { path = "../shared" }


# ── Web Framework ─────────────────────────────────────────────────────────────
# axum 0.8 incluye WebSockets nativamente con el feature "ws"
axum = { version = "0.8", features = ["ws", "macros"] }

# Middleware HTTP: CORS, logging, compresión, etc.
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "fs",          # servir archivos estáticos (vault de Obsidian como assets)
] }
tower = { version = "0.5", features = ["util"] }

# ── Async Runtime ─────────────────────────────────────────────────────────────
tokio.workspace = true
futures = "0.3"

# ── Base de datos ─────────────────────────────────────────────────────────────
# SQLite: un solo archivo, sin servidor, perfecto para uso local/doméstico
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "migrate",     # migraciones automáticas al arrancar
    "chrono",      # tipos de fecha en las queries
    "uuid",        # UUIDs en las queries
    "json",        # columnas JSON para inventario flexible
] }

# ── Serialización ─────────────────────────────────────────────────────────────
serde.workspace = true
serde_json.workspace = true

# ── Autenticación ─────────────────────────────────────────────────────────────
# JWT para diferenciar master vs jugadores
jsonwebtoken = "9"
# Hash de contraseñas (para el panel del master)
bcrypt = "0.16"

# ── Manejo de errores ─────────────────────────────────────────────────────────
thiserror.workspace = true
anyhow.workspace = true

# ── Logging / Tracing ─────────────────────────────────────────────────────────
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Utilidades ────────────────────────────────────────────────────────────────
uuid.workspace = true
chrono.workspace = true

# Parsear archivos .md del vault de Obsidian
# Lee frontmatter YAML + body Markdown
gray_matter = "0.2"    # extrae el frontmatter YAML de cada nota
pulldown-cmark = "0.12" # convierte Markdown a HTML para la app móvil

# Variables de entorno / configuración
dotenvy = "0.15"
config = "0.14"

# Notificar cambios en el vault (file watcher para hot-reload del lore)
notify = "7"

[dev-dependencies]
# Testing HTTP
axum-test = "16"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
